# tatteau

./: .cargo-leptos-version  .dockerignore  .gitignore  .railwayignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  EXPLORE_PAGE_DIAGNOSIS.md  MIGRATION_PLAN_SQLITE_TO_POSTGRESQL.md  MIGRATION_SUMMARY.md  QUERY_TEST_RESULTS.md  RAILWAY_SETUP.md  README.md  Tatteau_Platform_README_2025-08-23.md  build.rs  comprehensive_sqlx_migration.py  copy-db-between-volumes.sh  deploy.sh  docker-compose.yml  fly.toml  migrate_repos.py  migrate_server.sh  migrate_server_to_sqlx.py  migrate_to_sqlx.sh  migration_notes.md  migration_script.py  nginx.conf  package-lock.json  railway.toml  stylance.toml  sync-db.sh  test_explore_queries.sql
.fly/: SETUP.md
.github/workflows/: fly-deploy.yml
data-ingestion/: .env.example  Cargo.toml  README.md  load_ig_profiles.py
data-ingestion/src/: data_fetcher.rs  data_parser.rs  data_persister.rs  lib.rs  main.rs  repository.rs  scraper.rs
data-ingestion/src/actions/: apify_scraper.rs  google_api_ingestion.rs  mod.rs  reddit_scraper.rs  scraper.rs  style_extraction.rs
data-ingestion/src/actions/google_api_ingestion/: driver.rs  fetcher.rs  mod.rs  parser.rs
data-ingestion/src/services/: apify.rs  google_places.rs  mod.rs
migrations/: README.md  fix_type_mismatches.sql
shared-types/: Cargo.toml
shared-types/src/: lib.rs
web/: Cargo.toml  README.md  build.rs
web/public/style/: auth.css  booking_details.css  booking_modal.css  error_boundary.css  explore.css  multi_step_questionnaire.css  questionnaire.css  subscription_tiers.css
web/src/: app.rs  lib.rs  main.rs  map.rs  server.rs  server.rs.backup  server.rs.new  server_favorites.rs
web/src/components/: artist_cta.rs  artist_masonry_gallery.rs  auth_guard.rs  available_date_picker.rs  client_booking_modal.module.css  client_booking_modal.rs  error.rs  error_boundary.module.css  error_boundary.rs  event_item.rs  favorite_button.rs  instagram_embed.rs  instagram_embed_ssr.rs  instagram_fallback_cta.rs  instagram_posts_grid.rs  loading.rs  location_search.rs  masonry_gallery.rs  mod.rs  multi_step_questionnaire.module.css  multi_step_questionnaire.rs  navbar.rs  scoped_test_button.module.css  scoped_test_button.rs  shop_masonry_gallery.rs  style_tag.rs  style_tag_manager.rs  tattoo_gallery.rs  time_block.rs  time_picker.rs  time_slot_picker.rs
web/src/db/: entities.rs  favorites_repository.rs  mod.rs  pool.rs  (+4 more)
web/style/: admin.scss  artist_calendar.scss  artist_cta.scss  artist_dashboard.scss  artist_dashboard_calendar.scss  artist_dashboard_questionnaire.scss  artist_highlight.scss  artist_login_prompt.scss  artist_masonry_gallery.scss  auth.css  auth.scss  auth_guard.scss  available_date_picker.scss  booking.scss  booking_confirmation.scss  booking_details.css  booking_details.scss  booking_modal.scss  booking_sidebar.scss  calendar_grid.scss  client_booking_modal.scss  error_boundary.scss  event_item.scss  explore.scss  favorite_button.scss  favorites.scss  home.scss  instagram_demo.scss  instagram_embed.scss  instagram_embed_ssr.scss  instagram_fallback_cta.scss  instagram_posts_grid.scss  loading.scss  location_search.scss  main.scss  map_marker_popup.scss  map_renderer.scss  masonry_gallery.scss  match_results.scss  multi_step_questionnaire.scss  (+12 more)
(+52 files in other folders)
