[workspace]
members = [
    "data-ingestion",
    "web",
    "shared-types"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Cruz <christopherc1331@gmail.com>"]
description = "A web application for visualizing and managing location data"
license = "MIT"
repository = "https://github.com/christopherc1331/tatteau"
keywords = ["web", "location", "data"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"