[package]
name = "data-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
tokio-macros = "2.5.0"
urlencoding = "2.1.3"
dotenv = "0.15.0"
rusqlite = { version = "0.34.0", features = ["bundled"], optional = true }
once_cell = "1.21.3"
shared-types = { path = "../shared-types" }

[features]
default = []
sqlite = ["dep:rusqlite"]
